# BKEL_SomeIP_GateWay

./: .gitignore  README.md
app/: CMakeLists.txt
someip_gateway_mcu_stm32f103rb/: .cproject  .project
someip_gateway_mcu_stm32f103rb/ASW/inc/: BKEL_APP_protocol.h  BKEL_APP_service.h
someip_gateway_mcu_stm32f103rb/ASW/src/: BKEL_APP_TaskM.c  BKEL_APP_protocol.c  BKEL_APP_service.c
someip_gateway_mcu_stm32f103rb/BSW/inc/: BKEL_BSW_adc.h  BKEL_BSW_gpio.h  BKEL_BSW_spi.h  BKEL_BSW_uart.h
someip_gateway_mcu_stm32f103rb/BSW/src/: BKEL_BSW_adc.c  BKEL_BSW_gpio.c  BKEL_BSW_spi.c  BKEL_BSW_uart.c
someip_gateway_mcu_stm32f103rb/CFG/: BKEL_externs.h  BKEL_sysinit.h
someip_gateway_mcu_stm32f103rb/CFG/legacy/: FreeRTOSConfig.h
someip_gateway_mcu_stm32f103rb/Core/Inc/: BKEL_uart.h  main.h
someip_gateway_mcu_stm32f103rb/Core/Src/: BKEL_externs.c  BKEL_isr.c  BKEL_sysinit.c
